Fix jumps and add prefixes to CSS

--- a/public/Demo/css/style.css
+++ b/public/Demo/css/style.css
@@ -30,18 +30,21 @@ a:hover {
 
 /* HEADER */
 header{
+  -webkit-box-align: end;
+  -webkit-align-items: flex-end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   background: #fff;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   margin: 0;
-  padding: 20px 0;
+  padding: 20px 0 0 0;
   position:fixed;
   top: 0;
   width: 100%;
 }
-
-.fixed {
-
-}
-
 
 .small {
 	padding:10px 0 0 0;
@@ -128,31 +131,63 @@ header{
     color:#fff;
 }
 
+/* MENU HELPER */
+.jump-helper {
+  margin-top: -120px;        /* Size of fixed header */
+  padding-bottom: 120px;
+  display: block;
+}
+
+
 /* SERVICE BOXES */
 #philosophy {
-	flex-basis: 90%;
-	flex-direction: row;
+	-webkit-flex-basis: 90%;
+	    -ms-flex-preferred-size: 90%;
+	        flex-basis: 90%;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: row;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	display: -webkit-inline-flex; /* Safari */
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
 	display: inline-flex;
 	-webkit-flex-wrap: wrap; /* Safari */
-	flex-wrap:         wrap;
+	-ms-flex-wrap:         wrap;
+	    flex-wrap:         wrap;
 	margin: auto;
 }
 
 #group {
-	flex-basis: 33%;
+	-webkit-flex-basis: 33%;
+	    -ms-flex-preferred-size: 33%;
+	        flex-basis: 33%;
 	border-radius: 5px;
 }
 #personal {
-	flex-basis: 33%;
+	-webkit-flex-basis: 33%;
+	    -ms-flex-preferred-size: 33%;
+	        flex-basis: 33%;
 	border-radius: 5px;
 }
 
 #other {
-	align-items: center;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	flex-basis: 33%;
-	justify-content: center;
+	-webkit-flex-basis: 33%;
+	    -ms-flex-preferred-size: 33%;
+	        flex-basis: 33%;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 .calm {
@@ -193,7 +228,9 @@ header{
     padding: 0;
 }
 .title {
-	flex-basis: 100%;
+	-webkit-flex-basis: 100%;
+	    -ms-flex-preferred-size: 100%;
+	        flex-basis: 100%;
 	margin:  0;
 	padding: 40px 0 20px 10px;
 	color: #777;
@@ -201,24 +238,42 @@ header{
 }
 
 .class-list {
-	flex-basis: 100%;
-	flex-direction: row;
+	-webkit-flex-basis: 100%;
+	    -ms-flex-preferred-size: 100%;
+	        flex-basis: 100%;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: row;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	display: -webkit-inline-flex; /* Safari */
+	display: -webkit-inline-box;
+	display: -ms-inline-flexbox;
 	display: inline-flex;
 	-webkit-flex-wrap: wrap; /* Safari */
-	flex-wrap:         wrap;
+	-ms-flex-wrap:         wrap;
+	    flex-wrap:         wrap;
 	margin: auto;
 }
 
 
 .day {
-    flex-basis: 20%;
+    -webkit-flex-basis: 20%;
+        -ms-flex-preferred-size: 20%;
+            flex-basis: 20%;
     text-align: center;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     display: -webkit-inline-flex; /* Safari */
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     -webkit-flex-wrap: nowrap; /* Safari */
-    flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
 }
 
 .fit-class {
@@ -231,7 +286,10 @@ header{
 .type {
     padding: 5px;
     height: 125px;
-	order: 91;
+	-webkit-box-ordinal-group: 92;
+	-webkit-order: 91;
+	    -ms-flex-order: 91;
+	        order: 91;
 }
 
 .type p{
@@ -301,24 +359,43 @@ header{
 }
 
 .rate-boxes {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
     display: -webkit-inline-flex;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     -webkit-flex-wrap: wrap;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     width: 100%;
     padding: 0 0 20px 10px;
 }
 
 .rate-type {
-	flex-basis: 50%;
+	-webkit-flex-basis: 50%;
+	    -ms-flex-preferred-size: 50%;
+	        flex-basis: 50%;
     text-align: left;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
     display: -webkit-inline-flex;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     -webkit-flex-wrap: nowrap;
-    flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
 }
 
 .rate-title {
@@ -340,8 +417,14 @@ header{
 /* FACEBOOK LINK  */
 #social-media {
 	margin: 20px auto;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 }
 
 #social-media {
@@ -389,6 +472,17 @@ footer a:hover {
 
 @media screen and (max-width: 920px) {
 
+	/* HEADER */
+	header {
+		display: block;
+	}
+
+	.jump-helper {
+		height: 5px;
+		margin-top: -80px;        /* Size of fixed header */
+		padding-bottom: 80px;
+	}
+
 	/* RESIZE TEXT */
 	.day-name,
 	.class-name,
@@ -416,7 +510,10 @@ footer a:hover {
 		position: absolute;
 		-webkit-transform: translate(-150px, 0);
 		transform: translate(-150px, 0);
+		-webkit-transition: -webkit-transform 0.3s ease;
+		transition: -webkit-transform 0.3s ease;
 		transition: transform 0.3s ease;
+		transition: transform 0.3s ease, -webkit-transform 0.3s ease;
 		margin-top: 91px;
 	}
 	#topnav {
@@ -427,7 +524,7 @@ footer a:hover {
 	.menu a, .menu a:visited {
 		background-color: #e8e8e8;
 		border-bottom: 1px solid #fff;
-}
+	}
 
   nav.open {
     -webkit-transform: translate(0, 0);
@@ -484,7 +581,9 @@ footer a:hover {
 	#group,
 	#personal,
 	#other {
-		flex-basis: 100%;
+		-webkit-flex-basis: 100%;
+		    -ms-flex-preferred-size: 100%;
+		        flex-basis: 100%;
 	}
 
 	.calm {
@@ -506,7 +605,9 @@ footer a:hover {
 
     .day,
 	.rate-type {
-        flex-basis: 100%;
+        -webkit-flex-basis: 100%;
+            -ms-flex-preferred-size: 100%;
+                flex-basis: 100%;
         text-align: center;
         margin-bottom: 40px;
     }
@@ -515,4 +616,8 @@ footer a:hover {
       padding: 0;
 	}
 
+}
+
+.fb-like {
+	background-color: #777;
 }
